--- a/docker/.env.dist
+++ b/docker/.env.dist
@@ -5,6 +5,7 @@ PHP_VERSION=7.1
 PROJECT_PROTOCOL=https
 PROJECT_USER=1000
 SYMFONY_ENV=dev
+TIMEZONE=Europe/Rome
 
 # MySQL
 MYSQL_ROOT_PASSWORD=root
